@@ -380,12 +380,12 @@ public class ProtobufFileSerde implements BuiltInSerde {
     }
 
     private ProtoFile loadKnownProtoFile(String path, Descriptors.FileDescriptor fileDescriptor) {
-      String protoFileString = null;
+      String protoFileString;
       // know type file contains either message or enum
       if (!fileDescriptor.getMessageTypes().isEmpty()) {
-        protoFileString = new ProtobufSchema(fileDescriptor.getMessageTypes().get(0)).canonicalString();
+        protoFileString = new ProtobufSchema(fileDescriptor.getMessageTypes().getFirst()).canonicalString();
       } else if (!fileDescriptor.getEnumTypes().isEmpty()) {
-        protoFileString = new ProtobufSchema(fileDescriptor.getEnumTypes().get(0)).canonicalString();
+        protoFileString = new ProtobufSchema(fileDescriptor.getEnumTypes().getFirst()).canonicalString();
       } else {
         throw new IllegalStateException();
       }
