@@ -24,12 +24,10 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpStatus;
-import org.springframework.test.web.reactive.server.ExchangeResult;
 import org.springframework.test.web.reactive.server.WebTestClient;
 
 @Slf4j
-public class KafkaConnectServiceTests extends AbstractIntegrationTest {
+class KafkaConnectServiceTests extends AbstractIntegrationTest {
   private final String connectName = "kafka-connect";
   private final String connectorName = UUID.randomUUID().toString();
   private final Map<String, Object> config = Map.of(
@@ -46,7 +44,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
 
 
   @BeforeEach
-  public void setUp() {
+  void setUp() {
 
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
@@ -64,7 +62,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @AfterEach
-  public void tearDown() {
+  void tearDown() {
     webTestClient.delete()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}", LOCAL,
             connectName, connectorName)
@@ -73,7 +71,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldListAllConnectors() {
+  void shouldListAllConnectors() {
     webTestClient.get()
             .uri("/api/clusters/{clusterName}/connectors", LOCAL)
             .exchange()
@@ -84,7 +82,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldFilterByNameConnectors() {
+  void shouldFilterByNameConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -98,7 +96,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldFilterByStatusConnectors() {
+  void shouldFilterByStatusConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -112,7 +110,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldFilterByTypeConnectors() {
+  void shouldFilterByTypeConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -126,7 +124,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldNotFilterConnectors() {
+  void shouldNotFilterConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -140,7 +138,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldListConnectors() {
+  void shouldListConnectors() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
         .exchange()
@@ -150,7 +148,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturnNotFoundForNonExistingCluster() {
+  void shouldReturnNotFoundForNonExistingCluster() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", "nonExistingCluster",
             connectName)
@@ -159,7 +157,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturnNotFoundForNonExistingConnectName() {
+  void shouldReturnNotFoundForNonExistingConnectName() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL,
             "nonExistingConnect")
@@ -168,7 +166,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldRetrieveConnector() {
+  void shouldRetrieveConnector() {
     ConnectorDTO expected = new ConnectorDTO()
         .connect(connectName)
         .status(new ConnectorStatusDTO()
@@ -190,7 +188,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldUpdateConfig() {
+  void shouldUpdateConfig() {
     webTestClient.put()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
             LOCAL, connectName, connectorName)
@@ -221,7 +219,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenConnectReturns400ForInvalidConfigCreate() {
+  void shouldReturn400WhenConnectReturns400ForInvalidConfigCreate() {
     var connectorName = UUID.randomUUID().toString();
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
@@ -247,7 +245,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenConnectReturns500ForInvalidConfigCreate() {
+  void shouldReturn400WhenConnectReturns500ForInvalidConfigCreate() {
     var connectorName = UUID.randomUUID().toString();
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
@@ -272,7 +270,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
 
   @Test
   @SuppressWarnings("checkstyle:LineLength")
-  public void shouldReturn400WhenConnectReturns400ForInvalidConfigUpdate() {
+  void shouldReturn400WhenConnectReturns400ForInvalidConfigUpdate() {
     webTestClient.put()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
             LOCAL, connectName, connectorName)
@@ -312,7 +310,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenConnectReturns500ForInvalidConfigUpdate() {
+  void shouldReturn400WhenConnectReturns500ForInvalidConfigUpdate() {
     webTestClient.put()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
             LOCAL, connectName, connectorName)
@@ -341,7 +339,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldRetrieveConnectorPlugins() {
+  void shouldRetrieveConnectorPlugins() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/plugins", LOCAL, connectName)
         .exchange()
@@ -351,7 +349,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldSuccessfullyValidateConnectorPluginConfiguration() {
+  void shouldSuccessfullyValidateConnectorPluginConfiguration() {
     var pluginName = "FileStreamSinkConnector";
     var path =
         "/api/clusters/{clusterName}/connects/{connectName}/plugins/{pluginName}/config/validate";
@@ -372,7 +370,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldValidateAndReturnErrorsOfConnectorPluginConfiguration() {
+  void shouldValidateAndReturnErrorsOfConnectorPluginConfiguration() {
     var pluginName = "FileStreamSinkConnector";
     var path =
         "/api/clusters/{clusterName}/connects/{connectName}/plugins/{pluginName}/config/validate";
@@ -398,13 +396,13 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
               .findFirst().orElseThrow();
           assertEquals(
               "Invalid value 0 for configuration tasks.max: Value must be at least 1",
-              error.get(0)
+              error.getFirst()
           );
         });
   }
 
   @Test
-  public void shouldReturn400WhenTryingToCreateConnectorWithExistingName() {
+  void shouldReturn400WhenTryingToCreateConnectorWithExistingName() {
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
         .bodyValue(new NewConnectorDTO()
@@ -422,7 +420,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldResetConnectorWhenInStoppedState() {
+  void shouldResetConnectorWhenInStoppedState() {
 
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}",
@@ -455,7 +453,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenResettingConnectorInRunningState() {
+  void shouldReturn400WhenResettingConnectorInRunningState() {
 
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}",
